--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
-  "name": "detrak",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.1.0",
-    "@types/react": "18.2.5",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-  }
+	"name": "detrak",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"eslint": "eslint .",
+		"eslint:print-active-rules": "eslint --print-config src/pages/_app.tsx",
+		"prettier": "prettier -w ."
+	},
+	"dependencies": {
+		"@types/node": "20.1.0",
+		"@types/react": "18.2.5",
+		"@types/react-dom": "18.2.4",
+		"autoprefixer": "10.4.14",
+		"eslint": "8.40.0",
+		"eslint-config-next": "13.4.1",
+		"next": "13.4.1",
+		"postcss": "8.4.23",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"tailwindcss": "3.3.2",
+		"typescript": "5.0.4"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.59.2",
+		"@typescript-eslint/parser": "^5.59.2",
+		"eslint-config-prettier": "^8.8.0",
+		"prettier": "2.8.8",
+		"prettier-plugin-tailwindcss": "0.2.8"
+	}
 }
