--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"prettier": "prettier -w ."
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.0.1",
 		"@types/node": "20.1.0",
 		"@types/react": "18.2.5",
 		"@types/react-dom": "18.2.4",
