--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"prettier": "prettier -w ."
 	},
 	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.0.3",
 		"@radix-ui/react-dialog": "^1.0.3",
 		"@radix-ui/react-dropdown-menu": "^2.0.4",
 		"@radix-ui/react-scroll-area": "^1.0.3",
