--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
 		"prettier": "prettier -w ."
 	},
 	"dependencies": {
+		"class-variance-authority": "^0.6.1",
+		"clsx": "^1.2.1",
+		"lucide-react": "^0.257.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"tailwind-merge": "^1.13.2",
+		"tailwindcss-animate": "^1.0.6"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.37",
