--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
 		"prettier": "prettier -w ."
 	},
 	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.0.4",
+		"@radix-ui/react-dialog": "^1.0.4",
+		"@radix-ui/react-dropdown-menu": "^2.0.5",
+		"@radix-ui/react-hover-card": "^1.0.6",
+		"@radix-ui/react-scroll-area": "^1.0.4",
+		"@radix-ui/react-slot": "^1.0.2",
 		"class-variance-authority": "^0.6.1",
 		"clsx": "^1.2.1",
 		"lucide-react": "^0.257.0",
