--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"prettier": "prettier -w ."
 	},
 	"dependencies": {
+		"@fontsource/caveat": "^5.0.3",
+		"@fontsource/inter": "^5.0.3",
 		"@radix-ui/react-checkbox": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.4",
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
