Bring Detrak files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
-		"noUncheckedIndexedAccess": true,
+		// "noUncheckedIndexedAccess": true,
+
+		"allowJs": true, // This is for `confetti.min.js`
+
 		"paths": {
 			"~/*": ["./src/*"]
 		}
