--- a/.github/workflows/build-website.yml
+++ b/.github/workflows/build-website.yml
@@ -2,10 +2,9 @@
 # which makes the build compatible with Github Pages and Netlify
 
 on:
-  # was used to host the app on GitHub Pages; not necessary with Netlify
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 name: Build website
@@ -30,13 +29,13 @@ jobs:
           npm ci
           npm run build
 
-      - env:
-          STATICRYPT_PASSWORD: ${{ secrets.STATICRYPT_PASSWORD }}
-          # The first line is temporary, see https://github.com/robinmoisson/staticrypt/pull/177
-        run: |
-          npm run staticrypt -- docs/index.html
-          npm run staticrypt -- docs/index.html --share
-          mv -v encrypted/index.html docs/index.html
+      # - env:
+      #     STATICRYPT_PASSWORD: ${{ secrets.STATICRYPT_PASSWORD }}
+      #     # The first line is temporary, see https://github.com/robinmoisson/staticrypt/pull/177
+      #   run: |
+      #     npm run staticrypt -- docs/index.html
+      #     npm run staticrypt -- docs/index.html --share
+      #     mv -v encrypted/index.html docs/index.html
 
       - run: |
           git fetch
