--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@radix-ui/react-hover-card": "^1.0.6",
 		"@radix-ui/react-scroll-area": "^1.0.4",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@sentry/react": "^7.61.0",
 		"class-variance-authority": "^0.6.1",
 		"clsx": "^1.2.1",
 		"i18next": "^23.2.6",
