--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@radix-ui/react-scroll-area": "^1.0.4",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@sentry/react": "^7.61.0",
+		"@sentry/vite-plugin": "^2.5.0",
 		"class-variance-authority": "^0.6.1",
 		"clsx": "^1.2.1",
 		"i18next": "^23.2.6",
