Keep only font subsets that are necessary to reduce the bundle size
All font subsets are downloaded by the service worker, on everyone's machines

--- a/.github/workflows/build-website.yml
+++ b/.github/workflows/build-website.yml
@@ -48,8 +48,9 @@ jobs:
           [[ "$(git branch --show-current)" != "main" ]] && git branch main remotes/origin/main
           git switch --orphan $branch
           git checkout main netlify.toml
-          git add netlify.toml
-          git add docs ':!*.map'
+          git checkout staging/test-sentry docs.gitignore
+          mv docs.gitignore .gitignore
+          git add .gitignore netlify.toml docs
           git config user.name "Zwyx - GitHub Actions"
           git config user.email "29386932+Zwyx@users.noreply.github.com>"
           git commit -m "Build website"
