--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "VITE_APP_VERSION=$(jq -r '.version' package.json) vite",
-		"build": "npm run lint && tsc && VITE_APP_VERSION=$(jq -r '.version' package.json) vite build",
+		"build": "npm run lint && tsc && VITE_SENTRY_ENVIRONMENT=$SENTRY_ENVIRONMENT VITE_APP_VERSION=$(jq -r '.version' package.json) vite build",
 		"lint": "eslint src --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
 		"pwa-asset-generator": "npx pwa-asset-generator --opaque false --icon-only --favicon --padding '0' --type png res/dices.svg public && npx pwa-asset-generator --background '#0f1c2e' --padding '20%' --type png res/dices.svg public",
