Improve theme management
Add a lot of JavaScript, which allows us to:
- make Tailwind's `dark:` selector work
- make the app always aware of which theme is currently used (difference between `themeChoice` and `themeScheme`)
- remove the requirement to repeat the variables for the dark theme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,11 +11,11 @@
 	},
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"typescript.enablePromptUseWorkspaceTsdk": true,
-	"cSpell.words": ["Detrak", "gigamic", "staticrypt"],
 	"files.associations": {
 		"*.css": "tailwindcss"
 	},
 	"editor.quickSuggestions": {
 		"strings": true
-	}
+	},
+	"cSpell.words": ["Detrak", "gigamic", "staticrypt"]
 }
