--- a/.github/workflows/build-website.yml
+++ b/.github/workflows/build-website.yml
@@ -43,12 +43,22 @@ jobs:
         id: SENTRY_ENVIRONMENT
 
       - env:
+          DOMAIN: "${{ secrets.DOMAIN }}"
+          PLAUSIBLE_SCRIPT_SRC: "${{ secrets.PLAUSIBLE_SCRIPT_SRC }}"
+        run: |
+          sed -i "s@\$DOMAIN@${{ env.DOMAIN }}@g" index.html
+          sed -i "s@\$PLAUSIBLE_SCRIPT_SRC@${{ env.PLAUSIBLE_SCRIPT_SRC }}@g" index.html
+
+      - env:
           SENTRY_AUTH_TOKEN: "${{ secrets.SENTRY_AUTH_TOKEN }}"
           SENTRY_RELEASE: "${{ env.APP_VERSION }}"
+          DOMAIN: "${{ secrets.DOMAIN }}"
+          SENTRY_DSN: "${{ secrets.SENTRY_DSN }}"
           SENTRY_ENVIRONMENT: "${{ env.SENTRY_ENVIRONMENT }}"
         run: npm run build
 
       - run: |
+          git checkout index.html
           [[ "${{ env.BRANCH }}" != "dist" ]] && git fetch && git branch main remotes/origin/main
           git switch --orphan ${{ env.BRANCH }}
           git checkout main docs.gitignore netlify.toml
