Add ReadMe for store.app

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,8 @@
 {
 	"recommendations": [
+		"bradlc.vscode-tailwindcss",
 		"dbaeumer.vscode-eslint",
-		"streetsidesoftware.code-spell-checker",
-		"esbenp.prettier-vscode"
+		"esbenp.prettier-vscode",
+		"streetsidesoftware.code-spell-checker"
 	]
 }
