Prevent 404 when navigating to `/something`

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,12 @@
 [build]
 	publish = "docs"
 
+# Prevent 404 when navigating to `/something`
+[[redirects]]
+	from = "/*"
+	to = "/index.html"
+	status = 200
+
 [[headers]]
 	for = "/assets/*"
 	[headers.values]
