--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "VITE_APP_VERSION=$(jq -r '.version' package.json) vite",
 		"build": "npm run lint && tsc && VITE_DOMAIN=$DOMAIN VITE_SENTRY_DSN=$SENTRY_DSN VITE_SENTRY_ENVIRONMENT=$SENTRY_ENVIRONMENT VITE_APP_VERSION=$(jq -r '.version' package.json) vite build",
-		"lint": "eslint --report-unused-disable-directives --max-warnings 0 .",
+		"lint": "eslint --max-warnings=0 .",
 		"preview": "vite preview",
 		"pwa-asset-generator": "npx pwa-asset-generator --opaque false --icon-only --favicon --padding '0' --type png res/dices.svg public && npx pwa-asset-generator --background '#0f1c2e' --padding '20%' --type png res/dices.svg public",
 		"eslint:print-active-rules": "eslint --print-config src/index.ts",
@@ -45,6 +45,7 @@
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-i18next": "^6.0.3",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-only-warn": "^1.1.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
