--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,5 @@
 	"editor.quickSuggestions": {
 		"strings": true
 	},
-	"cSpell.words": ["Detrak", "gigamic", "staticrypt"]
+	"cSpell.words": ["CCPA", "Detrak", "gigamic", "mxschmitt", "staticrypt"]
 }
