Put back CSS layer
See https://github.com/shadcn-ui/ui/issues/313#issuecomment-1929054475

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,12 @@
 	"editor.quickSuggestions": {
 		"strings": true
 	},
-	"cSpell.words": ["CCPA", "Detrak", "gigamic", "mxschmitt", "staticrypt"]
+	"cSpell.words": [
+		"behavior",
+		"CCPA",
+		"Detrak",
+		"gigamic",
+		"mxschmitt",
+		"staticrypt"
+	]
 }
