--- a/.github/workflows/build-website.yml
+++ b/.github/workflows/build-website.yml
@@ -43,15 +43,12 @@ jobs:
         id: SENTRY_ENVIRONMENT
 
       - env:
-          DOMAIN: "${{ secrets.DOMAIN }}"
-          PLAUSIBLE_SCRIPT_SRC: "${{ secrets.PLAUSIBLE_SCRIPT_SRC }}"
-        run: sed -i "s@<!-- \$PLAUSIBLE_SCRIPT -->@<script defer data-domain=\"${{ env.DOMAIN }}\" src=\"${{ env.PLAUSIBLE_SCRIPT_SRC }}\"></script>@" index.html
-
-      - env:
           SENTRY_AUTH_TOKEN: "${{ secrets.SENTRY_AUTH_TOKEN }}"
-          SENTRY_RELEASE: "${{ env.APP_VERSION }}"
+          APP_VERSION: "${{ env.APP_VERSION }}"
           DOMAIN: "${{ secrets.DOMAIN }}"
+          PLAUSIBLE_API_URL: "${{ secrets.PLAUSIBLE_API_URL }}"
           SENTRY_DSN: "${{ secrets.SENTRY_DSN }}"
+          SENTRY_RELEASE: "${{ env.APP_VERSION }}"
           SENTRY_ENVIRONMENT: "${{ env.SENTRY_ENVIRONMENT }}"
         run: npm run build
 
