Make deploy trigger only on new version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,11 @@
 		"magick",
 		"maskable",
 		"mxschmitt",
+		"nvmrc",
+		"objectname",
+		"objecttype",
 		"staticrypt",
-		"workbox"
+		"workbox",
+		"Zwyx"
 	]
 }
