--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 		"allowJs": true, // This is for `confetti.min.js`
 
 		"paths": {
-			"~/*": ["./src/*"]
+			"@/*": ["./src/*"]
 		}
 	},
 	"include": ["src"],
