Create seedable PRNG

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"preview": "vite preview",
 		"eslint:print-active-rules": "eslint --print-config src/index.ts",
 		"prettier": "prettier -w .",
-		"generate-pwa-assets": "res/generate-pwa-assets.sh"
+		"generate-pwa-assets": "res/generate-pwa-assets.sh",
+		"check-prng": "bun -e 'import { checkPrngNumbersRepartition } from \"./src/lib/prng\"; checkPrngNumbersRepartition()'"
 	},
 	"dependencies": {
 		"@fontsource/caveat": "^5.0.3",
