Update Shadcn to be able to use the calendar component
The calendar component doesn't work without updating Tailwind CSS.

Also, the new dialog's and sheet's backdrop is nice.

--- a/package.json
+++ b/package.json
@@ -17,19 +17,22 @@
 	"dependencies": {
 		"@fontsource/caveat": "^5.0.3",
 		"@fontsource/inter": "^5.0.3",
-		"@radix-ui/react-checkbox": "^1.0.4",
-		"@radix-ui/react-dialog": "^1.0.4",
-		"@radix-ui/react-dropdown-menu": "^2.0.5",
-		"@radix-ui/react-hover-card": "^1.0.6",
+		"@radix-ui/react-checkbox": "^1.1.4",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-hover-card": "^1.1.6",
+		"@radix-ui/react-popover": "^1.1.6",
 		"@radix-ui/react-scroll-area": "^1.0.4",
-		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-slot": "^1.1.2",
 		"@sentry/react": "^7.120.3",
 		"@sentry/vite-plugin": "^2.10.3",
 		"class-variance-authority": "^0.6.1",
 		"clsx": "^1.2.1",
+		"date-fns": "^3.6.0",
 		"i18next": "^23.2.6",
 		"lucide-react": "^0.257.0",
 		"react": "^18.2.0",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.2.0",
 		"react-i18next": "^13.0.1",
 		"tailwind-merge": "^1.13.2",
@@ -53,8 +56,8 @@
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.4",
-		"tailwindcss": "^3.3.2",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.2",
 		"vite": "^4.5.9",
 		"vite-plugin-pwa": "^0.19.7"
