--- a/components.json
+++ b/components.json
@@ -2,14 +2,20 @@
 	"$schema": "https://ui.shadcn.com/schema.json",
 	"style": "default",
 	"rsc": false,
+	"tsx": true,
 	"tailwind": {
 		"config": "tailwind.config.js",
 		"css": "src/index.css",
 		"baseColor": "slate",
-		"cssVariables": true
+		"cssVariables": true,
+		"prefix": ""
 	},
 	"aliases": {
 		"components": "@/components",
-		"utils": "@/lib/utils"
-	}
+		"utils": "@/lib/utils",
+		"ui": "@/components/ui",
+		"lib": "@/lib",
+		"hooks": "@/hooks"
+	},
+	"iconLibrary": "lucide"
 }
