--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@fontsource/caveat": "^5.0.3",
 		"@fontsource/inter": "^5.0.3",
+		"@radix-ui/react-alert-dialog": "^1.1.6",
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -26,17 +27,18 @@
 		"@radix-ui/react-slot": "^1.1.2",
 		"@sentry/react": "^7.120.3",
 		"@sentry/vite-plugin": "^2.10.3",
-		"class-variance-authority": "^0.6.1",
-		"clsx": "^1.2.1",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
 		"i18next": "^23.2.6",
-		"lucide-react": "^0.257.0",
+		"lucide-react": "^0.475.0",
+		"qrcode.react": "^4.2.0",
 		"react": "^18.2.0",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.2.0",
 		"react-i18next": "^13.0.1",
-		"tailwind-merge": "^1.13.2",
-		"tailwindcss-animate": "^1.0.6"
+		"tailwind-merge": "^3.0.1",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@types/eslint": "^8.44.7",
