Implement router for syncing game ID with URL

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
 	"cSpell.words": [
 		"behavior",
 		"CCPA",
+		"color",
 		"Detrak",
 		"gigamic",
 		"magick",
@@ -35,5 +36,12 @@
 		"staticrypt",
 		"workbox",
 		"Zwyx"
+	],
+	"cSpell.overrides": [
+		{
+			"filename": "src/i18n/locales/fr.ts",
+			"language": "fr-90",
+			"words": ["Détrak"]
+		}
 	]
 }
