--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 		"@radix-ui/react-popover": "^1.1.6",
 		"@radix-ui/react-scroll-area": "^1.0.4",
 		"@radix-ui/react-slot": "^1.1.2",
-		"@sentry/react": "^7.120.3",
-		"@sentry/vite-plugin": "^2.10.3",
+		"@sentry/react": "^9.1.0",
+		"@sentry/vite-plugin": "^3.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
@@ -37,6 +37,7 @@
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.2.0",
 		"react-i18next": "^13.0.1",
+		"react-router": "^7.2.0",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7"
 	},
