Bring a few things from the project of the Library of Babel

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
 		"eslint-plugin-react-ref": "^1.0.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"postcss": "^8.4.31",
-		"prettier": "^3.0.3",
+		"prettier": "3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.2",
