--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@rollup/plugin-dynamic-import-vars": "^2.1.5",
 		"@types/eslint": "^8.44.7",
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
@@ -61,6 +62,7 @@
 		"postcss": "^8.4.31",
 		"prettier": "3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"rollup-plugin-visualizer": "^6.0.3",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.2",
 		"vite": "^6.3.4",
